--- a/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
@@ -14,5 +14,12 @@
       </ul>
    </li>
 
+   <li>
+      <a href="#metro-appbar">Application Bar</a>
+      <ul class="nav">
+         <li><a href="#metro-appbar-default">Default style</a></li>
+         <li><a href="#metro-appbar-dark">Dark style</a></li>
+      </ul>
+   </li>
    <li><a href="#metro-pivot">Pivot</a></li>
 </ul>
