completed toast templates, refactored markup.

--- a/less/bootmetro/alerts.less
+++ b/less/bootmetro/alerts.less
@@ -30,41 +30,43 @@
 }
 
 
-
 .toast {
    position: relative;
-   .box-sizing(border-box);
-   padding: 13px 60px 13px 15px;
+   .media;
+   width: 400px;
    margin-bottom: 10px;
    border: 2px solid lighten(@linkColor, 10%);
-   width: 380px;
    height: 90px;
    text-shadow: none;
    background-color: @linkColor;
-   .no-border-radius;
    color: @white;
    z-index: @zindexNotification;
-
-   h4 {
-      display: block;
-      width: 100%;
-      margin: 0;
-      .text-overflow-wrap;
-   }
+}
+.toast-body {
+   .media-body;
+   padding: 13px 60px 13px 15px;
+   height: 64px;
 
    p {
-      display: block;
-      width: 100%;
-      margin: 0;
       .text-overflow-wrap;
+      margin: 0;
    }
+}
 
-   .toast-inner {
-      margin-left: 90px;
+// For images and videos, set to block
+.toast-object {
+   .media-object;
+}
 
-   }
+// Reset margins on headings for tighter default spacing
+.toast-heading {
+   .media-heading;
+   .text-overflow-wrap;
+}
 
 
+
+.toast {
    &.toasttext01 {
       p {
          height: 60px;
@@ -101,33 +103,7 @@
          line-height: 20px;
       }
    }
-
-
-   &.toastimageandtext01 {
-      padding: 0;
-
-      img {
-         display: inline-block;
-         vertical-align: top;
-         max-width: 88px;
-         max-height: 88px;
-         margin: 0;
-      }
-      p {
-         display: inline-block;
-         vertical-align: top;
-         padding: 13px 60px 10px 15px;
-         height: 60px;
-         line-height: 20px;
-      }
-
-   }
-
-
-
 }
-
-
 
 
 
