--- a/templates/docs/docs-index.mustache
+++ b/templates/docs/docs-index.mustache
@@ -4,9 +4,9 @@
    <p class="lead">This is the right place where to find all the stuff needed to build a Metro web application.</p>
 </div>
 
-<div id="getting-started" class="bs-docs-section">
+<div class="bs-docs-section">
    <div class="page-header">
-      <h1>Getting started</h1>
+      <h1 id="getting-started">Getting started</h1>
    </div>
 
    <p class="lead">
@@ -75,4 +75,65 @@
          </p>
       </div>
    </div>
+
 </div>
+
+
+
+<!-- File structure
+================================================== -->
+<div class="bs-docs-section">
+   <div class="page-header">
+      <h1 id="file-structure">File structure</h1>
+   </div>
+   <p class="lead">Within the download you'll find the following file structure and contents, logically grouping common assets and providing both compiled and minified variations.</p>
+   <p>Once downloaded, unzip the compressed folder to see the structure of (the compiled) Bootstrap. You'll see something like this:</p>
+<pre class="prettyprint">
+  bootmetro/
+  └── assets/
+        │
+        ├── css/
+        │   ├── bootmetro.css
+        │   ├── bootmetro-icons.css
+        │   ├── bootmetro-responsive.css
+        │   ├── bootmetro-ui-light.css
+        │   ├── bootmetro.min.css
+        │   ├── bootmetro-icons.min.css
+        │   ├── bootmetro-responsive.min.css
+        │   └── bootmetro-ui-light.min.css
+        │
+        ├── font/
+        │   ├── IcoMoon.eot
+        │   ├── IcoMoon.svg
+        │   ├── IcoMoon.ttf
+        │   ├── IcoMoon.woff
+        │   ├── LICENSE.txt
+        │   ├── opensans-bold-webfont.eot
+        │   ├── opensans-bold-webfont.svg
+        │   ├── opensans-bold-webfont.ttf
+        │   ├── opensans-bold-webfont.woff
+        │   ├── opensans-light-webfont.eot
+        │   ├── opensans-light-webfont.svg
+        │   ├── opensans-light-webfont.ttf
+        │   ├── opensans-light-webfont.woff
+        │   ├── opensans-regular-webfont.eot
+        │   ├── opensans-regular-webfont.svg
+        │   ├── opensans-regular-webfont.ttf
+        │   ├── opensans-regular-webfont.woff
+        │   ├── opensans-semibold-webfont.eot
+        │   ├── opensans-semibold-webfont.svg
+        │   ├── opensans-semibold-webfont.ttf
+        │   └── opensans-semibold-webfont.woff
+        │
+        └── js/
+             ├── bootstrap.js
+             ├── bootstrap.min.js
+             ├── bootmetro-panorama.js
+             ├── bootmetro-pivot.js
+             └── bootmetro-icons-ie7.js
+</pre>
+   <p>This is the most basic form of BootMetro: compiled files for quick drop-in usage in nearly any web project. We provide compiled CSS and JS (<code>bootmetro-*.*</code>), as well as compiled and minified CSS and JS (<code>bootmetro.min.*</code>). The image files are compressed using <a href="http://imageoptim.com/">ImageOptim</a>, a Mac app for compressing PNGs.</p>
+   <p>Please note that all JavaScript plugins require jQuery to be included.</p>
+</div>
+
+
