--- a/templates/docs/sidebar_partials/sidebar-docs-index.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-index.mustache
@@ -1,7 +1,7 @@
 <ul class="nav metro-nav-list bs-docs-sidenav">
-   <li>
-      <a href="#getting-started">Getting started</a>
-   </li>
+   <li><a href="#getting-started">Getting started</a></li>
+   <li><a href="#browsers">Browsers support</a></li>
+   <li><a href="#file-structure">File structure</a></li>
    <li>
       <a href="#toc">Documentation Index</a>
    </li>
