--- a/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
@@ -22,6 +22,12 @@
       </ul>
    </li>
    <li><a href="#metro-pivot">Pivot</a></li>
-   <li><a href="#metro-listview">ListView</a></li>
+   <li>
+      <a href="#metro-listview">ListView</a>
+      <ul class="nav">
+         <li><a href="#metro-listview-grid">Grid layout</a></li>
+         <li><a href="#metro-listview-list">List layout</a></li>
+      </ul>
+   </li>
 
 </ul>
