--- a/templates/docs/docs-advanced-components.mustache
+++ b/templates/docs/docs-advanced-components.mustache
@@ -629,9 +629,6 @@
            </div>
          </div>
 
-
-         <!-- template con icomoon -->
-
       </div>
 
    </div>
@@ -697,12 +694,109 @@
 
       <div class="listview list-layout">
 
+         <div class="listview-item bg-color-blue">
+            <div class="pull-left" href="#">
+               <img class="listview-item-object" data-src="holder.js/60x60">
+            </div>
+            <div class="listview-item-body">
+               <h4 class="listview-item-heading">Media heading</h4>
+               <p class="two-lines">Body text that wraps over two lines. Vivamus elementum semper nisi.</p>
+           </div>
+         </div>
+
+         <div class="listview-item bg-color-green">
+            <div class="pull-left" href="#">
+               <img class="listview-item-object" data-src="holder.js/60x60">
+            </div>
+            <div class="listview-item-body">
+               <h4 class="listview-item-heading">Media heading</h4>
+               <p>Single line. Lorem ipsum sin ut dolorem</p>
+               <p>Single line. Lorem ipsum sin ut dolorem</p>
+            </div>
+         </div>
+
+         <div class="listview-item bg-color-orange">
+            <div class="pull-left" href="#">
+               <img class="listview-item-object" data-src="holder.js/60x60">
+            </div>
+            <div class="listview-item-body">
+               <p class="three-lines">Body text that wraps over three lines. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula</p>
+            </div>
+         </div>
+
+         <div class="listview-item bg-color-grayLight selected">
+            <div class="pull-left" href="#">
+               <img class="listview-item-object" data-src="holder.js/60x60">
+            </div>
+            <div class="listview-item-body">
+               <h4 class="listview-item-heading">Media heading</h4>
+               <p class="two-lines">Body text that wraps over two lines. Vivamus elementum semper nisi.</p>
+           </div>
+         </div>
+
+         <div class="listview-item bg-color-blue">
+            <div class="pull-left" href="#">
+               <div class="listview-item-object icon-github"></div>
+            </div>
+            <div class="listview-item-body">
+               <h4 class="listview-item-heading">Media heading</h4>
+               <p class="two-lines">Body text that wraps over two lines, IcoMoon icon on the left.</p>
+           </div>
+         </div>
+
       </div>
 
    </div>
 <pre class="prettyprint linenums">
+&lt;div class="listview list-layout"&gt;
+
+   ...
+
+&lt;/div&gt;
+</pre>
+
+
+   <h2 id="metro-listview-alt">Alternatives</h2>
+   <p>......</p>
+   <div class="bs-docs-example bs-docs-example-listview">
+
+      <!--<div class="listview list-layout">-->
+
+         <div class="listview-item bg-color-blue">
+            <div class="pull-left" href="#">
+               <img class="listview-item-object" data-src="holder.js/60x60">
+            </div>
+            <div class="listview-item-body">
+               <h4 class="listview-item-heading">Media heading</h4>
+               <p class="two-lines">Body text that wraps over two lines. Vivamus elementum semper nisi.</p>
+           </div>
+         </div>
+
+
+
+         <div class="listview-item bg-color-blue">
+            <div class="pull-left" href="#">
+               <div class="listview-item-object icon-github"></div>
+            </div>
+            <div class="listview-item-body">
+               <h4 class="listview-item-heading">Media heading</h4>
+               <p class="two-lines">Body text that wraps over two lines, IcoMoon icon on the left.</p>
+           </div>
+         </div>
+
+      <!--</div>-->
+
+   </div>
+<pre class="prettyprint linenums">
+&lt;div class="listview list-layout"&gt;
+
+   ...
+
+&lt;/div&gt;
 
 </pre>
+
+
 
 </div>
 
