--- a/templates/docs/docs-advanced-components.mustache
+++ b/templates/docs/docs-advanced-components.mustache
@@ -760,21 +760,22 @@
    <p>......</p>
    <div class="bs-docs-example bs-docs-example-listview">
 
-      <!--<div class="listview list-layout">-->
+      <div class="listview list-layout big">
 
-         <div class="listview-item bg-color-blue">
+         <div class="listview-item big bg-color-blue">
             <div class="pull-left" href="#">
-               <img class="listview-item-object" data-src="holder.js/60x60">
+               <img class="listview-item-object" data-src="holder.js/112x112">
             </div>
             <div class="listview-item-body">
                <h4 class="listview-item-heading">Media heading</h4>
+               <h5 class="listview-item-subheading">Subtitle</h5>
                <p class="two-lines">Body text that wraps over two lines. Vivamus elementum semper nisi.</p>
            </div>
          </div>
 
 
 
-         <div class="listview-item bg-color-blue">
+         <div class="listview-item big bg-color-green">
             <div class="pull-left" href="#">
                <div class="listview-item-object icon-github"></div>
             </div>
@@ -784,7 +785,7 @@
            </div>
          </div>
 
-      <!--</div>-->
+      </div>
 
    </div>
 <pre class="prettyprint linenums">
