--- a/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
@@ -27,6 +27,7 @@
       <ul class="nav">
          <li><a href="#metro-listview-grid">Grid layout</a></li>
          <li><a href="#metro-listview-list">List layout</a></li>
+         <li><a href="#metro-listview-alt">Alternatives</a></li>
       </ul>
    </li>
 
