--- a/templates/docs/docs-advanced-components.mustache
+++ b/templates/docs/docs-advanced-components.mustache
@@ -757,7 +757,7 @@
 
 
    <h2 id="metro-listview-alt">Alternatives</h2>
-   <p>......</p>
+   <p>Bigger ListViews are available, add the <code>big</code> class to the <code>listview</code> and <code>listview-item</code> elements:</p>
    <div class="bs-docs-example bs-docs-example-listview">
 
       <div class="listview list-layout big">
@@ -789,12 +789,32 @@
 
    </div>
 <pre class="prettyprint linenums">
-&lt;div class="listview list-layout"&gt;
+&lt;div class="listview list-layout big"&gt;
 
-   ...
+   &lt;div class="listview-item big bg-color-blue"&gt;
+      &lt;div class="pull-left" href="#"&gt;
+         &lt;img class="listview-item-object" data-src="holder.js/112x112"&gt;
+      &lt;/div&gt;
+      &lt;div class="listview-item-body"&gt;
+         &lt;h4 class="listview-item-heading"&gt;Media heading&lt;/h4&gt;
+         &lt;h5 class="listview-item-subheading"&gt;Subtitle&lt;/h5&gt;
+         &lt;p class="two-lines"&gt;Body text that wraps over two lines. Vivamus elementum semper nisi.&lt;/p&gt;
+     &lt;/div&gt;
+   &lt;/div&gt;
+
+
+
+   &lt;div class="listview-item big bg-color-green"&gt;
+      &lt;div class="pull-left" href="#"&gt;
+         &lt;div class="listview-item-object icon-github"&gt;&lt;/div&gt;
+      &lt;/div&gt;
+      &lt;div class="listview-item-body"&gt;
+         &lt;h4 class="listview-item-heading"&gt;Media heading&lt;/h4&gt;
+         &lt;p class="two-lines"&gt;Body text that wraps over two lines, IcoMoon icon on the left.&lt;/p&gt;
+     &lt;/div&gt;
+   &lt;/div&gt;
 
 &lt;/div&gt;
-
 </pre>
 
 
