--- a/templates/docs/docs-advanced-components.mustache
+++ b/templates/docs/docs-advanced-components.mustache
@@ -825,3 +825,14 @@
 
 
 <!-- Tiles templates -->
+<!-- ListVIew
+================================================== -->
+<div class="bs-docs-section">
+   <div class="page-header">
+      <h1 id="metro-tiles">Tiles templates <small></small></h1>
+   </div>
+
+
+
+</div>
+
