--- a/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
@@ -30,5 +30,20 @@
          <li><a href="#metro-listview-alt">Alternatives</a></li>
       </ul>
    </li>
+   <li>
+      <a href="#metro-tiles">Tiles</a>
+      <ul class="nav">
+         <li>
+            <a href="#metro-tiles-square">Square templates</a>
+            <ul class="nav">
+               <li><a href="#textonly">Text Only Tiles</a></li>
+               <li><a href="#imageonly">Image Only Tiles</a></li>
+               <li><a href="#squarepeek">Square peek templates</a></li>
+            </ul>
+         </li>
+         <li><a href="#metro-tiles-wide">Wide templatest</a></li>
+         <li><a href="#metro-tiles-widepeek">Widepeek templates</a></li>
+      </ul>
+   </li>
 
 </ul>
