--- a/templates/docs/docs-advanced-components.mustache
+++ b/templates/docs/docs-advanced-components.mustache
@@ -833,6 +833,29 @@
    </div>
 
 
+   <h2 id="metro-tiles-square">Square Tiles Templates</h2>
+
+
+   <h3>Square App Tile</h3>
+   <div class="bs-docs-example metro">
+      <a class="tile app" href="#">
+         <div class="image-wrapper">
+            <img src="assets/img/Windows 8.png" alt=""/>
+         </div>
+         <div class="app-label">AppName</div>
+         <div class="app-count">12</div>
+      </a>
+   </div>
+<pre class="prettyprint linenums">
+
+</pre>
+
+
+
+
 
 </div>
+
+
+
 
