--- a/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
@@ -36,12 +36,12 @@
          <li>
             <a href="#metro-tiles-square">Square templates</a>
             <ul class="nav">
-               <li><a href="##metro-tiles-square-textonly">Text Only Tiles</a></li>
+               <li><a href="#metro-tiles-square-textonly">Text Only Tiles</a></li>
                <li><a href="#metro-tiles-square-imageonly">Image Only Tiles</a></li>
                <li><a href="#metro-tiles-square-squarepeek">Square peek templates</a></li>
             </ul>
          </li>
-         <li><a href="#metro-tiles-wide">Wide templatest</a></li>
+         <li><a href="#metro-tiles-wide">Wide templates</a></li>
          <li><a href="#metro-tiles-widepeek">Widepeek templates</a></li>
       </ul>
    </li>
