--- a/templates/pages/index.mustache
+++ b/templates/pages/index.mustache
@@ -14,7 +14,7 @@
                      </a>
                      <span class="muted">it's free</span>
                      <br/>
-                     <span class="label label-success">Latest version: 1.0 pre-beta</span>
+                     <span class="label label-success">Latest version: 1.0.0 Alpha1</span>
                   </p>
                </div>
                <div class="span5">
