--- a/templates/pages/index2.mustache
+++ b/templates/pages/index2.mustache
@@ -38,7 +38,7 @@
             <a class="btn btn-large btn-success" href="https://github.com/aozora/bootmetro/zipball/master">
                <div class="text">
                   <span class="header">Download Now</span>
-                  <span class="small">latest version: 0.7</span>
+                  <span class="small">latest version: 1.0.0 alpha 1</span>
                </div>
                <i class="icon-download"></i>
             </a>
