--- a/templates/docs/docs-advanced-components.mustache
+++ b/templates/docs/docs-advanced-components.mustache
@@ -1436,8 +1436,32 @@
 
 
    <h2 id="metro-tiles-widepeek">Widepeek Tiles Templates</h2>
-
    <div class="metro">
+
+         <table id="widepeek" class="table">
+            <caption><h3>Wide Peek templates</h3></caption>
+            <thead>
+               <tr>
+                  <th>Template Name</th>
+                  <th>Description</th>
+                  <th>Tile</th>
+               </tr>
+            </thead>
+            <tbody>
+               <tr>
+                  <td><strong>[TODO] TileWidePeekImageCollection01</strong></td>
+                  <td>Top: One large square image with four smaller square images to its right, no text. Bottom: One header string in larger text over one string of regular text wrapped over a maximum of four lines.</td>
+                  <td>
+                     <a class="tile widepeek" href="#">
+                        <div class="tile-image-wrapper">
+                           <img src="assets/img/tile-wide.jpg" alt=""/>
+                        </div>
+                        <div class="text">Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</div>
+                     </a>
+                  </td>
+               </tr>
+            </tbody>
+         </table>
 
    </div>
 
